--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@
 <footer>
     <span style="color: var(--accent);">Nicholas Mwangi Maina</span>
     &nbsp;·&nbsp; IT Support &nbsp;|&nbsp; Software Developer &nbsp;|&nbsp; Data Analyst
-    &nbsp;·&nbsp; 2025
+    &nbsp;·&nbsp;© 2026
 </footer>
 
 <script>
